tests/auto/qml/qqmlecmascript/data/AssignListPropertyByIndexOnGadget.qml
@@ -10,9 +10,11 @@ QtObject {
 
     Component.onCompleted: {
         gadget.gadgetStringList = ["Element1", "Element2", "Element3"]
+        gadget.gadgetVariantList = [1, "foo", null, true]
         object.qobjectStringList = ["Element1", "Element2", "Element3"]
 
         gadget.gadgetStringList[0] = "Completely new Element"
+        gadget.gadgetVariantList[0] = "Completely new Element"
         object.qobjectStringList[0] = "Completely new Element"
     }
 }
